# mcp-fiscal-brasil

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  index.html  mkdocs.yml  pyproject.toml  render.yaml  server.json  smithery.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: contributing.md  gen_api_pages.py  index.md  roadmap-v0.2.md
docs/agentic/: compliance.md  index.md  nfe.md  regimes.md  sped.md  supplier.md
docs/getting-started/: config.md  deploy.md  install.md  quickstart.md
docs/interfaces/: cli.md  mcp.md  nodejs.md  rest-api.md  web-ui.md
docs/marketing/: awesome-entries.md  blog-launch-v0.2.md  blog-post-en.md  blog-post-pt.md  linkedin-post-pt.md  x-thread-pt.md
docs/modules/: cep.md  cnae.md  cnpj.md  cpf.md  ibge.md  index.md  nfe.md  simples.md  sped.md
docs/use-cases/: due-diligence.md  supplier-validation.md  tax-planning.md
examples/: basico.py  cnpj_lookup.py  django_integracao.py  erp_contabil.py  fastapi_integracao.py  nfe_xml_parse.py  sped_validation.py  validacao_lote.py
src/mcp_fiscal_brasil/: __init__.py  api.py  cli.py  sdk.py  server.py
src/mcp_fiscal_brasil/_core/: __init__.py  config.py  errors.py  http.py  logging.py
src/mcp_fiscal_brasil/agentic/: __init__.py  compliance.py  nfe.py  regimes.py  schemas.py  sped.py  supplier.py
src/mcp_fiscal_brasil/cep/: __init__.py  client.py  schemas.py
src/mcp_fiscal_brasil/certidoes/: __init__.py  client.py  schemas.py  tools.py
src/mcp_fiscal_brasil/cnae/: __init__.py  client.py  schemas.py
src/mcp_fiscal_brasil/cnpj/: __init__.py  client.py  schemas.py  tools.py
src/mcp_fiscal_brasil/cpf/: __init__.py  client.py  schemas.py  tools.py
src/mcp_fiscal_brasil/empresa/: __init__.py  client.py  schemas.py
src/mcp_fiscal_brasil/esocial/: __init__.py  schemas.py  tools.py
src/mcp_fiscal_brasil/ibge/: __init__.py  client.py  schemas.py
src/mcp_fiscal_brasil/mei/: __init__.py  client.py  schemas.py
src/mcp_fiscal_brasil/nfe/: __init__.py  client.py  schemas.py  tools.py  xml_parser.py
src/mcp_fiscal_brasil/nfse/: __init__.py  client.py  schemas.py  tools.py
src/mcp_fiscal_brasil/shared/: __init__.py  constants.py  exceptions.py  http_client.py  rate_limiter.py  schemas.py  validators.py  xml_utils.py
src/mcp_fiscal_brasil/simples/: __init__.py  client.py  schemas.py  tools.py
src/mcp_fiscal_brasil/sped/: __init__.py  schemas.py  tools.py
tests/: conftest.py  test_agentic.py  test_api.py  test_cep.py  test_certidoes.py  test_cli.py  test_cnae.py  test_cnpj.py  test_cnpj_client.py  test_core_config.py  test_core_errors.py  test_core_http.py  test_cpf.py  test_empresa.py  test_ibge.py  test_mei.py  test_nfe.py  test_nfe_xml_parser.py  test_schemas.py  test_simples.py  test_sped.py  test_validators.py
