[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-fiscal-brasil"
version = "0.2.0"
description = "Servidor MCP para integrar IAs com o sistema fiscal brasileiro. Consulte CNPJ, NFe, NFSe, SPED, eSocial e mais via linguagem natural."
authors = [
    { name = "Nikolas de Hor" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "lxml>=5.0",
    "python-dateutil>=2.9.0",
    "tenacity>=9.1.4",
    "cachetools>=7.0.5",
    "aiolimiter>=1.2.1",
    "structlog>=25.5.0",
    "pydantic-settings>=2.13.1",
    "typer>=0.25.1",
    "fastapi>=0.136.1",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
mcp-fiscal-brasil = "mcp_fiscal_brasil.server:main"
mcp-fiscal = "mcp_fiscal_brasil.cli:main"
mcp-fiscal-api = "mcp_fiscal_brasil.api:run"

[project.urls]
Examples = "https://github.com/nikolasdehor/mcp-fiscal-brasil/tree/main/examples"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_fiscal_brasil"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mcp_fiscal_brasil"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-cov>=7.1.0",
    "types-cachetools>=7.0.0.20260518",
]
