[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-fiscal-brasil"
version = "0.2.1"
description = "Servidor MCP para integrar IAs com o sistema fiscal brasileiro. Consulte CNPJ, NFe, NFSe, SPED, eSocial e mais via linguagem natural."
authors = [
    { name = "Nikolas de Hor" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "mcp",
    "model-context-protocol",
    "claude",
    "fiscal",
    "nfe",
    "nfce",
    "nfse",
    "sped",
    "sefaz",
    "cnpj",
    "esocial",
    "reforma-tributaria",
    "ibs",
    "cbs",
    "receita-federal",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "lxml>=6.0.2",  # TODO: migrar para >=6.1.0 (XXE GHSA-vfmq-68hx-4jfw)
    "python-dateutil>=2.9.0",
    "tenacity>=9.1.4",
    "cachetools>=7.0.5",
    "aiolimiter>=1.2.1",
    "structlog>=25.5.0",
    "pydantic-settings>=2.13.1",
    "typer>=0.25.1",
    "fastapi>=0.136.1",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
mcp-fiscal-brasil = "mcp_fiscal_brasil.server:main"
mcp-fiscal = "mcp_fiscal_brasil.cli:main"
mcp-fiscal-api = "mcp_fiscal_brasil.api:run"

[project.urls]
Homepage = "https://github.com/nikolasdehor/mcp-fiscal-brasil"
Repository = "https://github.com/nikolasdehor/mcp-fiscal-brasil"
Issues = "https://github.com/nikolasdehor/mcp-fiscal-brasil/issues"
Changelog = "https://github.com/nikolasdehor/mcp-fiscal-brasil/blob/main/CHANGELOG.md"
Examples = "https://github.com/nikolasdehor/mcp-fiscal-brasil/tree/main/examples"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_fiscal_brasil"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mcp_fiscal_brasil"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.2",
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-material>=9.7.6",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocstrings[python]>=1.0.4",
    "pymdown-extensions>=10.21.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
    "types-cachetools>=7.0.0.20260518",
]
